# gnn-oversquashing-autoresearch

./: .gitignore  NOTES.md  README.md  analysis.py  prepare.py  program.md  pyproject.toml  replication.tsv  results.tsv  train.py
variants/: 1-fa-last-layer.py  10-raw-x-similarity-bias-attention.py  12-ablation-no-diagonal-mask.py  13-ablation-baseline-raw-x-attn-last-layer-only.py  14-ablation-baseline-virtual-node.py  15-ablation-local-gat-on-tree-edges.py  16-ablation-tied-qk-diag-mask-no-raw-bias.py  2-gin-sum-agg-mlp-fa-last.py  5-2-tree-layers-attention-fa.py  6-0-tree-layers-pure-attention.py  7-pure-attention-hidden-128.py
