[project]
name = "gnn-autoresearch"
version = "0.1.0"
description = "Autonomous over-squashing study on Tree-NeighborsMatch"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.20",
    "numpy>=2.2.6",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
